[iOS] DumpRenderTree crashes when accessing window.testRunner.inspectorTestStubURL <http://webkit.org/b/155295>

Reviewed by Brent Fulgham.

Tools:

* DumpRenderTree/mac/TestRunnerMac.mm:
(TestRunner::inspectorTestStubURL): Always return nullptr for
PLATFORM(IOS).  This matches what we did in r192604 for
WebKitTestRunner/InjectedBundle/mac/TestRunnerMac.mm.

LayoutTests:

* platform/ios-simulator-wk1/TestExpectations:
* platform/ios-simulator-wk2/TestExpectations:
- Remove all "inspector/" tests.  They are already skipped in
  platform/ios-simulator/TestExpectations, so no need to
  resurrect them here.


Canonical link: https://commits.webkit.org/173411@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@197942 268f45cc-cd09-0410-ab3c-d52691b4dbfc